--- a/aelf.tools/AElf.Tools/AElf.Tools.csproj
+++ b/aelf.tools/AElf.Tools/AElf.Tools.csproj
@@ -1,4 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="..\version.props" />
+
     <PropertyGroup>
         <AssemblyName>AElf.Tools</AssemblyName>
         <VersionPrefix>$(AElfToolsVersion)</VersionPrefix>
