--- a/.github/workflows/publish-aelf-tools.yml
+++ b/.github/workflows/publish-aelf-tools.yml
@@ -22,6 +22,7 @@ jobs:
           bash scripts/download-contract-patcher.sh
 
       - name: Read version from version.props
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           if [[ "${GITHUB_REF}" == "refs/heads/preview" ]]; then
             version=$(grep -oP '<Version>\K[^<]+' version.props)
