--- a/templates/HelloWorldContract/src/HelloWorld.csproj
+++ b/templates/HelloWorldContract/src/HelloWorld.csproj
@@ -17,7 +17,7 @@
 
     <ItemGroup>
         <PackageReference Include="AElf.Sdk.CSharp" Version="1.5.0" />
-        <PackageReference Include="AElf.Tools" Version="1.0.2">
+        <PackageReference Include="AElf.Tools" Version="1.0.4-rc.*">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
