--- a/templates/HelloWorldContract/test/HelloWorld.Tests.csproj
+++ b/templates/HelloWorldContract/test/HelloWorld.Tests.csproj
@@ -7,9 +7,6 @@
     <PropertyGroup>
         <NoWarn>0436;CS2002</NoWarn>
     </PropertyGroup>
-    <PropertyGroup>
-        <ObjPath>$(MSBuildProjectDirectory)/$(BaseIntermediateOutputPath)$(Configuration)/$(TargetFramework)/</ObjPath>
-    </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AElf.Testing.TestBase" Version="1.0.0" />
@@ -22,26 +19,10 @@
         <PackageReference Include="xunit.runner.console" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
         <PackageReference Include="AElf.ContractTestKit" Version="1.5.0" />
-        <PackageReference Include="AElf.Tools" Version="1.0.2">
+        <PackageReference Include="AElf.Tools" Version="1.0.4-rc.*">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Protobuf Include="Protobuf/base/*.proto">
-            <ContractOutputOptions>nocontract</ContractOutputOptions>
-        </Protobuf>
-        <Protobuf Include="Protobuf/message/*.proto">
-            <ContractOutputOptions>nocontract</ContractOutputOptions>
-        </Protobuf>
-        <Protobuf Include="Protobuf/stub/*.proto">
-            <ContractOutputOptions>stub</ContractOutputOptions>
-        </Protobuf>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Include="$(ObjPath)Protobuf/**/*.cs" />
     </ItemGroup>
 
     <ItemGroup>
