--- a/aelf.testing.testbase/AElf.Testing.TestBase/AElf.Testing.TestBase.csproj
+++ b/aelf.testing.testbase/AElf.Testing.TestBase/AElf.Testing.TestBase.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="..\version.props" />
 
     <PropertyGroup>
         <AssemblyName>AElf.Testing.TestBase</AssemblyName>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>AElf.Testing.TestBase</RootNamespace>
         <IsPackable>true</IsPackable>
     </PropertyGroup>
@@ -11,10 +12,14 @@
         <NoWarn>0436</NoWarn>
     </PropertyGroup>
     
+    <PropertyGroup>
+        <AelfVersion>1.3.0</AelfVersion>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="AElf.ContractDetector" Version="1.0.0" />
-        <PackageReference Include="AElf.EconomicSystem" Version="1.3.0" />
-        <PackageReference Include="AElf.GovernmentSystem" Version="1.3.0" />
+        <PackageReference Include="AElf.EconomicSystem" Version="$(AelfVersion)" />
+        <PackageReference Include="AElf.GovernmentSystem" Version="$(AelfVersion)" />
         <PackageReference Include="coverlet.msbuild" Version="2.5.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
         <PackageReference Include="Shouldly" Version="3.0.2" />
@@ -24,76 +29,76 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.ContractTestBase" Version="1.3.0" />
+        <PackageReference Include="AElf.ContractTestBase" Version="$(AelfVersion)" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Contracts.Configuration" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Configuration" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Consensus.AEDPoS" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Consensus.AEDPoS" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.CrossChain" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.CrossChain" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Election" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Election" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Profit" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Profit" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.MultiToken" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.MultiToken" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Parliament" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Parliament" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Vote" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Vote" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.TokenConverter" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.TokenConverter" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Treasury" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Treasury" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Economic" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Economic" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Referendum" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Referendum" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.Association" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.Association" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </PackageReference>
-        <PackageReference Include="AElf.Contracts.TokenHolder" Version="1.3.0">
+        <PackageReference Include="AElf.Contracts.TokenHolder" Version="$(AelfVersion)">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
             <OutputItemType>Contract</OutputItemType>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
