Change aelf tools to be published manually

--- a/.github/workflows/publish-aelf-tools.yml
+++ b/.github/workflows/publish-aelf-tools.yml
@@ -1,7 +1,8 @@
 on:
-  push:
-    branches:
-      - preview
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - preview
 
 jobs:
   publish:
