--- a/aelf.testing.testbase/AElf.Testing.TestBase/AElf.Testing.TestBase.csproj
+++ b/aelf.testing.testbase/AElf.Testing.TestBase/AElf.Testing.TestBase.csproj
@@ -13,7 +13,7 @@
     </PropertyGroup>
     
     <PropertyGroup>
-        <AelfVersion>1.3.0</AelfVersion>
+        <AelfVersion>1.12.3.1-preview</AelfVersion>
     </PropertyGroup>
 
     <ItemGroup>
